@@ -3,6 +3,8 @@ NEWS
      o	In 'trajectory', all vectorfield and map evaluation is now done in C for speed.
      	For continuous-time dynamical systems, this gives an approximately 4-fold speedup.
 
+     o	Demos have been created to show some examples.
+
 0.41-2
      o	Fix bug in 'bbs' example.
 
